fix: change spacing from px to rem

--- a/tablero/styles.css
+++ b/tablero/styles.css
@@ -28,8 +28,8 @@ body {
         "outsideleft-b insideleft-b main-b insideright-b outsideright-b";
     grid-template-columns: 1fr 1fr 30rem 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    row-gap: 10px;
-    column-gap: 10px;
+    row-gap: 1rem;
+    column-gap: 1rem;
 }
 
 .outside-left-top {
